import "client.comm.proto";

package client;

message member_info {
    required uint32	role_id	= 1 [default=0];
	required bool   ready	= 2 [default=false]; // true已准备 false未准备
}

message team_info
{
	enum status_e
	{
		normal = 1;			// 正常状态
		ready  = 2;			// 开始读秒
	}
	required uint32 team_id = 1;	// 队伍ID
	required uint32 raid_id = 2;	// 副本ID
	required uint32 captain = 3;	// 队长ID
	repeated member_info member = 4;
	required status_e status = 5;		// 0 未就绪 1 就绪
}

message team_notify
{
	required uint32 role_id = 1;
	required uint32 type = 2;		// 1 离开队伍 0 队伍解散
}

message team_member
{
	required uint32 role_id			= 1;
	required uint32 level			= 2;
	required string name			= 3;
	required uint32 profession		= 4;
	required uint32 power			= 5;
	required bool	captain			= 6;		// 是否队长
	required bool	ready			= 7;
	optional uint32 vip_lv			= 8;
}

// 小明队伍信息
message team_info_rsp {
	required uint32 team_id = 1;
	required uint32 raid_id = 2;
	repeated team_member tm = 3;
}

// 小明加入队伍
message join_team_req {
    required uint32 team_id = 1; 
	optional server_head svr_head = 1000;
}

message join_team_rsp {
	required uint32 ret = 1; // 见client.raid_operate.proto raid_check_result_e
	optional uint32 raid_id = 2;
}

// 小明被踢出队伍
message fire_member_req {
    required uint32 role_id = 1; // 小明的ID
	optional server_head svr_head = 1000;
}

message fire_member_rsp {
	required uint32 type = 1;		// 0 队伍解散 1 被踢
}

// 小明创建队伍
message create_team_req {
    required uint32 raid_id = 1;
    optional server_head svr_head = 1000;
}

message create_team_rsp {
	required uint32 ret = 1; // 见client.raid_operate.proto raid_check_result_e
}

// 小明改变准备状态
message team_ready_req {
	required bool status = 1;	// true 准备 false 取消准备
	optional server_head svr_head = 1000;
}

// 小明的队伍进入副本
message team_enter_raid_req {
	required uint32 team_id = 1;		// 随便填
	optional server_head svr_head = 1000;
}

// 小明准备进入副本
message team_enter_prepare_req {
	required uint32 time = 1;
	optional server_head svr_head = 1000;
}

message team_enter_prepare_rsp {
	required uint32 ret = 1;		// 0 成功 1 不是队长 2 没有准备好 3 失败
}

message team_enter_raid_rsp {
	// 0 成功 1不是队长 2没有准备好 3匹配失败 4失败
	required uint32 ret = 1;		
}

// 小明的队伍添加机器人
message team_add_robot {
	required uint32 role_id = 1;
	repeated uint32 robot = 2;
}

// 小明队伍杀怪情况 
message team_kill_statistics_rsp {
	required uint32 role_id = 1;
	required string role_name = 2;
	required uint32 num = 3;
}

message team_join_check {
	required uint32 role_id = 1;
	required uint32 raid_id = 2;
	required uint32 team_id = 3;
}
